--- a/portfolio_works/works1/p_works1.html
+++ b/portfolio_works/works1/p_works1.html
@@ -11,9 +11,9 @@
 <header>
     <nav id="g-nav">
         <ul>
-        <li><a href="../../top.html">top</a></li>  
+        <li><a href="../../index.html">top</a></li>  
         <li><a href="../../portfolio_about/about.html">about</a></li>  
-        <li><a href="../../top.html#works">works</a></li>  
+        <li><a href="../../index.html#works">works</a></li>  
         <li><a href="../../portfolio_about/about.html#contact">contact</a></li>  
         </ul>
         </div>
@@ -131,7 +131,7 @@
 <footer>
     <div class="btn-box">
     <a class="arrow_animation_button-back" href="#">back</a>
-    <a class="arrow_animation_button" href="../../top.html#works">all works</a>
+    <a class="arrow_animation_button" href="../../index.html#works">all works</a>
     <a class="arrow_animation_button-next" href="../works3/p_works3.html">next</a>
     </div>
 </footer>
