--- a/portfolio_about/about.html
+++ b/portfolio_about/about.html
@@ -10,9 +10,9 @@
 <body>
     <nav id="g-nav">
     <ul>
-    <li><a href="../top.html">top</a></li>  
+    <li><a href="../index.html">top</a></li>  
     <li><a href="#about">about</a></li>  
-    <li><a href="../top.html#works">works</a></li>  
+    <li><a href="../index.html#works">works</a></li>  
     <li><a href="#contact">contact</a></li>  
     </ul>
     </div>
