--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="./img/pf_name_works.png" alt="works" class="main-title-works">
 
         <div class="works_area fadeUpTrigger">
-        <div class="top-name-set"><a href="./portfolio_works/works3/p_works3.html">
+        <div class="top-name-set"><a href="./portfolio_works/works-9/p_works9.html">
           <div class="bc-line"></div>
             <div class="top-name-in" style="background: url(./img/kitasui_top_s.jpg);">
                 <div class="top-title-num en-num"><span>#</span>09</div>
@@ -42,7 +42,7 @@
             <div class="top-contents">design / coding</div>
           </a></div>
 
-          <div class="top-name-set"><a href="./portfolio_works/works2/p_works2.html">
+          <div class="top-name-set"><a href="./portfolio_works/works-8/p_works8.html">
             <div class="bc-line"></div>
             <div class="top-name-in" style="background:url(./img/kitakan_top_s.jpg);">
                 <div class="top-title-num en-num"><span>#</span>08</div>
@@ -51,7 +51,7 @@
             <div class="top-contents">design / coding</div>
           </a></div>
 
-          <div class="top-name-set"><a href="./portfolio_works/works1/p_works1.html">
+          <div class="top-name-set"><a href="./portfolio_works/works-7/p_works7.html">
             <div class="bc-line"></div>
             <div class="top-name-in" style="background:url(./img/jiko_top_s.jpg);">
                 <div class="top-title-num en-num"><span>#</span>07</div>
@@ -60,48 +60,50 @@
             <div class="top-contents">design / coding</div>
           </a></div>
 
-          <div class="top-name-set"><a href="./portfolio_works/works4/p_works4.html">
+          <div class="top-name-set"><a href="./portfolio_works/works-6/p_works6.html">
             <div class="bc-line"></div>
-            <div class="top-name-in" style="background: url(./img/kilto.png);">
+            <div class="top-name-in" style="background: url(./img/kilto_top.png);">
                 <div class="top-title-num en-num"><span>#</span>06</div>
             </div>
             <div class="top-title">kilt heir design HP</div>
             <div class="top-contents">design</div>
           </a></div>
 
-          <div class="top-name-set"><a href="#">
+          <div class="top-name-set"><a href="./portfolio_works/works-5/p_works5.html">
             <div class="bc-line"></div>
-            <div class="top-name-in" style="background:url(./img/piyopiyo.png);">
+            <div class="top-name-in" style="background:url(./img/piyopiyo_top_s.png);">
                 <div class="top-title-num en-num"><span>#</span>05</div>
             </div>
             <div class="top-title">Parenting Circle "piyopiyo" HP</div>
             <div class="top-contents">design</div>
           </a></div>
 
-          <div class="top-name-set"><a href="#">
+          <div class="top-name-set"><a href="./portfolio_works/works-4/p_works4.html">
             <div class="bc-line"></div>
-            <div class="top-name-in" style="background:url(./img/curucuma.png);">
+            <div class="top-name-in" style="background:url(./img/kurukuma_top.png);">
                 <div class="top-title-num en-num"><span>#</span>04</div>
             </div>
             <div class="top-title">atelier CURUCUMA HP</div>
             <div class="top-contents">design</div>
           </a></div>
 
-          <div class="top-name-set"><a href="#">
+          <div class="top-name-set"><a href="./portfolio_works/works-3/p_works3.html">
             <div class="bc-line"></div>
-            <div class="top-name-in" style="background:#666">
+            <div class="top-name-in" style="background:url(./img/taiwan_baner.jpg); background-size:contain;
+            background-position:center;">
                 <div class="top-title-num en-num"><span>#</span>03</div>
             </div>
-            <div class="top-title">banner ad design</div>
+            <div class="top-title">Travel banner ad design</div>
             <div class="top-contents">design</div>
           </a></div>
 
-          <div class="top-name-set"><a href="#">
+          <div class="top-name-set"><a href="./portfolio_works/works-2/p_works2.html">
             <div class="bc-line"></div>
-            <div class="top-name-in" style="background:#666">
+            <div class="top-name-in" style="background:url(./img/sale_baner.jpg);background-size:contain;
+            background-position:center;">
                 <div class="top-title-num en-num"><span>#</span>02</div>
             </div>
-            <div class="top-title">banner ad design</div>
+            <div class="top-title">WINTER SALE banner ad design</div>
             <div class="top-contents">design</div>
           </a></div>
 
@@ -110,8 +112,8 @@
             <div class="top-name-in" style="background:#666">
                 <div class="top-title-num en-num"><span>#</span>01</div>
             </div>
-            <div class="top-title">banner ad design</div>
-            <div class="top-contents">design</div>
+            <div class="top-title">diagnostic game</div>
+            <div class="top-contents">cording / design</div>
           </a></div>
 
     </div> 
