--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="top-contents">design</div>
           </a></div>
 
-          <div class="top-name-set"><a href="#">
+          <div class="top-name-set"><a href="./portfolio_works/works-1/p_works1.html">
             <div class="bc-line"></div>
             <div class="top-name-in" style="background:#666">
                 <div class="top-title-num en-num"><span>#</span>01</div>
