--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
           <div class="top-name-set"><a href="./portfolio_works/works-1/p_works1.html">
             <div class="bc-line"></div>
-            <div class="top-name-in" style="background:#666">
+            <div class="top-name-in" style="background-image: url(./img/app-m.png); background-size: contain;">
                 <div class="top-title-num en-num"><span>#</span>01</div>
             </div>
             <div class="top-title">diagnostic game</div>
