--- a/portfolio_works/works-1/p_works1.html
+++ b/portfolio_works/works-1/p_works1.html
@@ -33,7 +33,7 @@
             <p class="main-contents">design / cording</p>
         </div>
 
-        <img src="#" alt="game">
+        <img src="./works1_img/app-top.png" alt="app">
 
 
         <!-- 内容 -->
@@ -45,6 +45,10 @@
                 <a href="#detail-box-2">情報設計</a>
             </div>
         </div>
+        <div class="contents-site">
+            <a href="https://takahashiyasuho.github.io/app_takahashi/" target="_blank">別ページで開く</a>
+        </div>
+        </section>
 
         </section>
 
@@ -54,7 +58,7 @@
             <div class="news-list">
             <dt>内容</dt>
             <dd>WEBフロントエンド構築の職業訓練校に入学後、4ヶ月目に行ったjavasqriptを使用した診断ゲーム制作。
-                栄養指導に楽しく関心を持ってもらえるようなゲームを考案しました。
+                栄養指導に楽しく関心を持ってもらえるようなゲームを考案しました。（ミライ診断の詳細先は未制作です。）
             </dd>
              </div>
 
@@ -65,7 +69,7 @@
 
             <div class="news-list">
                 <dt>ターゲット</dt>
-                <dd>ダイエットに関心のある女子高校生、成長期の高校生男女
+                <dd>成長期の高校生男女、新社会人
                     </dd>
                  </div>
 
@@ -76,7 +80,7 @@
                 
              <div class="news-list">
                 <dt>使用ツール</dt>
-                <dd>VSCord / Photoshop / illustrator</dd>
+                <dd>VSCord / Photoshop </dd>
                 </div>  
         </dl>
 </div>
@@ -92,7 +96,7 @@
 
     <div class="news-list">
     <dt>イラストによる具体的なイメージ提供</dt>
-    <dd>今日食べたものがミライの自分につながるイメージができるようにイラストを追加。文字だけでなくキャラクターで表現することでイメージしやすくしました。
+    <dd>今日食べたものがミライの自分につながるイメージができるようにイラストを加えました。
     </dd>
     </div>
 
